fixed logos for certs, fixed filter button added overflow:scroll

--- a/public/css/dropdown.css
+++ b/public/css/dropdown.css
@@ -29,15 +29,21 @@
   }
   
   .dropdown-content {
+    
     display: none;
     position: absolute;
     background-color: #f6f6f6;
     min-width: 230px;
-    overflow: auto;
+    
     border: 1px solid #ddd;
     z-index: 1;
   }
-  
+
+  .filter-items{
+    height: 200px;
+    overflow: scroll;
+  }
+
   .dropdown-content a {
     color: black;
     padding: 12px 16px;
